right menu fixed on iPhones

--- a/src/app/car/nft-detail/nft-detail.component.scss
+++ b/src/app/car/nft-detail/nft-detail.component.scss
@@ -322,6 +322,18 @@
 @media screen and (min-width: 2100px) and (min-height: 1081px) {
 }
 @media screen and(max-width: 1024px) and (orientation: landscape) {
+  .detail-content {
+    .detail-text {
+      .text-buttons {
+        .buy {
+          img {
+            width: 15px;
+            height: 15px;
+          }
+        }
+      }
+    }
+  }
   .category-title-first {
     font-size: 30px;
     line-height: 32px;
