--- a/src/app/common/components/layout/default/site-layout/site-layout.component.scss
+++ b/src/app/common/components/layout/default/site-layout/site-layout.component.scss
@@ -2181,7 +2181,7 @@ button.xko {
     width: 417px;
     height: calc(100vh - 140px);
     min-height: calc(100vh - 140px);
-    position: fixed;
+    position: absolute;
     overflow: hidden;
     top: 110px;
     right: 40px;
@@ -2959,6 +2959,7 @@ button.xko {
     .right-part-holder {
       display: block;
       pointer-events: none;
+      position: fixed;
       top: 65px;
       height: calc(var(--vh, 1vh) * 100 - 90px);
       min-height: calc(var(--vh, 1vh) * 100 - 90px);
