--- a/src/app/race/pages/start-race/start-race.component.scss
+++ b/src/app/race/pages/start-race/start-race.component.scss
@@ -2161,9 +2161,6 @@ h3 {
       }
     }
   }
-  .main-wrapper {
-    height: calc(100vh - 100px);
-  }
   .dash-back {
     height: calc(100vh - 100px);
   }
